test/invalid/idl/union-any.widl
typedef (any or DOMString or any) Any;
